# ProyectoPracticas

./: README.md
RTMPose/: README.md  landmarks_unified.py  mobile_pose_server.py  openmmlab_env.yml  openmmlab_env_full.yml  openmmlab_explicit.txt  pose_bridge_compressed.py  pose_server_discovery.py  publish_mobile_pose_topics.py  requirements_openmmlab_pip.txt  versions_openmmlab.txt
RTMPose/mobile_output/: latest_landmarks.json
RTMPose/old/: landmarks_server.py  mobile_api_server.py  pose_bridge_webcam.py  pose_webcam_node.py
RTMPose/predicciones/: video.json
ros2_ws/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/pose_landmarks_pkg/lib/pose_landmarks_pkg/: compressed_image_node  webcam_node
ros2_ws/install/pose_landmarks_pkg/share/pose_landmarks_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/ddsm115_controller/: README.md
