<?xml version="1.0"?>
<package format="3">
  <name>pose_landmarks_pkg</name>
  <version>0.0.1</version>
  <description>Pose estimation and anatomical landmarks for hospital robot applications</description>

  <maintainer email="al417883@uji.es">Marta López</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
